# mcp-redmine

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
docs/: architecture.md  requirements.md  wiki-convention.md
src/redmine_mcp/: client.py  server.py
src/redmine_mcp/tools/: issues.py  master.py  projects.py  wiki.py
tests/: test_client.py
tests/test_tools/: test_issues.py  test_wiki.py
