[project]
name = "redmine-mcp-server"
version = "0.1.0"
description = "MCP Server for Redmine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/redmine_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]
